# Ruskin

./: Dockerfile  app.py  dataframe.html  manage_ruskin.py  player_stats.csv  pyproject.toml  ruskin.db
instance/: test.db
templates/: base.html  index.html  update.html
