[tool.poetry]
name = "ruskin"
version = "0.1.0"
description = ""
authors = ["Anand Bhakta <abhakta@bink.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.1"
numpy = "^1.26.0"
sqlalchemy = "^2.0.22"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
flask = "^3.0.0"
flask-sqlalchemy = "^3.1.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
notebook = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
